2004-09-06  Rich Kilmer <rich@infoether.com>
  * lib/rubygems/remote_installer.rb - enabled caching of source caches
     based on the size of the yaml.Z/yaml file.
     
2004-08-29  Chad Fowler <chad@chadfowler.com>
	* /lib/rubygems/gem_command.rb: small big fix for local gem installs
	on Windows.

2004-08-28  Rich Kilmer <rich@infoether.com>

        * /lib/rubygems/installer.rb, /lib/rubygems/doc_manager.rb, 
          /lib/rubygems/cmd_manager.rb - Added an exception: FilePermissionError
          which checks to ensure write access to the install/uninstall/rdoc 
          destination directories and raises a nice error instead of the standard
          one. 

2004-08-28  Rich Kilmer <rich@infoether.com>

        * /lib/rubygems/installer.rb - commented out stub addition and removal

2004-08-28  Rich Kilmer <rich@infoether.com>

        * /lib/rubygems.rb, /lib/rubygems/loadpath_manager.rb -
         this adds all the loadpath_manager stuff with the 'ultimate require hack' to
         rubygems.rb.  Also, require_gem methods body has been extracted into a method
         Gem.activate that differs in the calling signature in that the second param is
         a boolean that determines whether to autorequire or not.

2004-08-27  Rich Kilmer <rich@infoether.com>

        * lib/rubygems/user_interaction - added ask_yes_no as a method
          which returns true/false and formats/processes the [yn] stuff.
          it also has an optional second parameter of true/false for the
          default value.

        * lib/rubygems/installer.rb, lib/rubygems/remote_installer.rb, 
          lib/rubygems/command_manager.rb - changed all places where ask 
          was used with [Yn] to ask_yes_no

2004-08-24  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/installer.rb: Library stubs are now installed as per
	  'library_stubs' gemspec attribute.  A stub is (still) also installed
	  for the 'autorequire' attribute.  All library stub handling